@@ -1,0 +1,37 @@
+#! /bin/sh -vx
+# $Id$
+# Copyright 2024 Japanese TeX Development Community <issue@texjp.org>
+# You may freely use, modify and/or distribute this file.
+
+BinDir=${BinDir:-.}
+ExeExt=${ExeExt:-}
+_xdvipdfmx=$BinDir/xdvipdfmx$ExeExt
+
+LC_ALL=C; export LC_ALL;  LANGUAGE=C; export LANGUAGE
+TEXMFCNF=$srcdir/../kpathsea
+TFMFONTS=".;$srcdir/tests;$srcdir/data"
+T1FONTS="$srcdir/tests;$srcdir/data"
+TEXPICTS=$srcdir/tests
+SOURCE_DATE_EPOCH=1588474800
+export TEXMFCNF TFMFONTS T1FONTS TEXPICTS SOURCE_DATE_EPOCH
+
+failed=
+
+rm -f multi_incl.pdf
+
+echo "*** dvipdfmx: test for including pdf graphics multiple times"
+
+$_xdvipdfmx --dvipdfmx -vv -o multi_incl.pdf $srcdir/tests/multi_incl.dvi \
+ || failed="$failed multi-incl"
+
+filesize=`ls -l multi_incl.pdf | awk '{print $5}'`
+if [ "$filesize" -gt 85000 ]; then
+  echo "Too large file size :" $filesize
+  failed="$failed multi-incl-size"
+fi
+
+
+test -z "$failed" && exit 0
+echo
+echo "failed tests:$failed"
+exit 1
